<resources>
    <string name="app_name">Sockets</string>
    <string name="tituloconfig">Escribe los datos del servidor</string>
    <string name="dip">Dirección IP</string>
    <string name="puerto">Puerto</string>
    <string name="perCon">Personaliza tu Chat</string>
    <string name="iniciar">Empezar</string>
    <string name="nombre">Tu Nombre</string>
    <string name="botonLoginServidor">Servidor</string>
    <string name="botonLoginCliente">Cliente</string>
    <string name="textLogin">La decisión es tuya.....</string>
    <string name="input_mensaje">Escribir mensaje</string>
    <string name="acercade">Acerca De</string>
    <string name="creadoPor">Creado por:</string>
    <string name="primerInt">Miguel Verdú Nieto</string>
    <string name="segInt">Christian Santos Morales</string>
    <string name="terInt">Cristian Pérez Segura</string>
    <string name="cuarInt">Javier Del Rey Serrano</string>
</resources>
