<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    tools:context="es.fempa.pmdm.socket.AcercaDe">

    <TextView
        android:id="@+id/creado"
        android:layout_width="204dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/creadoPor"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/primInt"
        android:layout_width="203dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/primerInt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creado"
        app:layout_constraintVertical_bias="0.549"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/segInt"
        android:layout_width="202dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/segInt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/primInt" />

    <TextView
        android:id="@+id/terInt"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/terInt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segInt" />

    <TextView
        android:id="@+id/cuarInt"
        android:layout_width="202dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cuarInt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terInt"
        app:layout_constraintVertical_bias="0.1" />

</android.support.constraint.ConstraintLayout>